# dotandkey-advisor

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.override.yml  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  test.html  test_grid.html
backend/: app.py  behavioral_learning.py  chip_options.py  combo_retrieval.py  comparison_queries.py  context.py  differentiation.py  explain_api.py  explainability.py  llm_adapter.py  match_keywords.py  product_relations.py  profile.py  query_intent.py  questions.py  retrieval.py  router.py  sensitivity_memory.py  session.py  user_graph.py  vague_intent.py
data/: dot_and_key_products_comparison.csv  product_media.json  promotions.json
extension/: README.md  inject.js  manifest.json  prefetch.js  test_inject.js  widget.js
frontend/: README.md   demo.html  index.html  test_widget.js  widget.js
graph/: capability_schema.py  capability_scorer.py  ingredient_importance.py  ingredient_knowledge.py  ingredient_synergy.py  product_dna.py  product_type_ontology.py  schema.cypher  taxonomy.py  user_graph_schema.cypher
prompts/: greeting.md  intake.md  other_playbooks.md  recommend.md  router.md  system.md
scripts/: backfill_ingredient_roles.py  build_graph_pipeline.py  build_ingredient_knowledge.py  build_product_types.py  build_synergy_graph.py  check_dev.fish  csv_to_graph.py  fetch_product_media.py  generate_capability_scores.py  generate_differentiation.py  generate_product_dna.py  generate_product_identity.py  generate_product_relations.py  inci_parser.py  init_demo.py  (+7 more)
(+25 files in other folders)
