[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "dotandkey-advisor"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "falkordb>=1.6.1",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    "redis>=5.0.0",
    "openai>=1.40.0",
    "pydantic>=2.7.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["backend*", "graph*", "scripts*"]
